--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -1,5 +1,5 @@
 <div class="signup un">
-  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700"><g id="logoGroup" transform="translate(120 232)"><path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/><path id="thunder" fill-opacity="0" d="M-55.5-209.8c-.3-.5-.9-.8-1.5-.8h-12.4v-19.6c0-.8-.6-1.6-1.4-1.7-.8-.2-1.7.3-2 1l-14.2 32c-.2.5-.2 1.2.1 1.7.3.5.9.8 1.5.8H-73v19.6c0 .8.6 1.6 1.4 1.7h.4c.7 0 1.3-.4 1.6-1.1l14.2-32.1c.3-.4.3-1-.1-1.5z" fill="#fff"/></g></svg>
+  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700"><g id="logoGroup" transform="translate(120 232)"><path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/><div id="thunder"/></div></g></svg>
 
   <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</span></p>
 
