--- a/src/less/login.less
+++ b/src/less/login.less
@@ -191,6 +191,7 @@
       border-right: 2px solid #009c83;
       display: inline-block;
       color: white;
+      z-index: 100;
     }
 
     .signup {
@@ -198,6 +199,7 @@
       border: 1px solid #009c83;
       background: white;
       left: 300px;
+      z-index: 100;
     }
 
     .forgot {
@@ -248,8 +250,8 @@
   position: fixed;
   background: black;
   opacity: 0;
-  z-index: 1;
   display: none;
+  transition: all .3s ease-out;
 
   @media(max-width: 800px) {
     display: none !important;
