--- a/partials/signup.hbs
+++ b/partials/signup.hbs
@@ -1,13 +1,13 @@
-<div class="signup un">
-  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700"><g id="logoGroup" transform="translate(120 232)"><path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/><div id="thunder"/></div></g></svg>
-
-  <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</span></p>
-
-  <div class="loader un" style="visibility:hidden;"></div>
-
-  <img src="http://salehriaz.com/Projects/GradientMobileUI/img/logo_txt.svg" class="logo-txt un" width="120px">
-
-  <img src="http://salehriaz.com/Projects/GradientMobileUI/img/text_signup.svg" class="text-signup un" width="205px" style="visibility:hidden;">
+<div class="signup un" style="visibility:hidden;">
+  <svg id="logo" xmlns="http://www.w3.org/2000/svg" viewBox="0 0 96 700">
+    <g id="logoGroup" transform="translate(120 232)">
+    <path id="halfCircle" d="M-103.4-218.4c-15.2 16.7-14.7 42.5 1.4 58.6 16.6 16.6 43.5 16.6 60.1 0 16.1-16.1 16.6-42 1.4-58.6" fill="none" stroke="#fff" stroke-width="10"/>
+    <div id="thunder"></div>
+  </g>
+</svg>
+  <h2 class="signup-head" style="visibility:hidden;">SIGNUP</h2>
+  <p class="description" style="visibility: hidden;">Automation is inevitable. Join the winning side.</p>
+  <p class="text_max un" style="visibility: hidden;">Step up your shitposting game.</p>
 
   <form class="signup-form un" style="visibility:hidden;">
     <!--<input id="username" class="form-control tr" placeholder="Username" type="text">-->
@@ -17,7 +17,7 @@
   </form>
 
   <div class="options un" style="visibility:hidden;">
-  <!--<a class="float-left">Need help?</a>-->
+    <!--<a class="float-left">Need help?</a>-->
     <a class="float-right">Sign In</a>
   </div>
 </div>
