--- a/partials/postpreview.hbs
+++ b/partials/postpreview.hbs
@@ -10,7 +10,6 @@
         <div class="featured-media" style="background:url({{feature_image}});" alt="{{{title}}}"></div>
         </a>
       {{!-- div class="postimage" style="background:url({{feature_image}});" alt="{{{title}}}"></div> --}}
-
   {{/if}}
 
   <div class="content">
@@ -23,6 +22,10 @@
         {{content words="40"}}
       </div>
     {{/has}}
+
+    {{> series-headline}}
+
+
     <div class="post-permalink">
       <div class="meta">
         {{#primary_tag}}
