--- a/src/less/customtemplates.less
+++ b/src/less/customtemplates.less
@@ -243,7 +243,7 @@
 
       .description {
         padding: 15px;
-        background: rgba(255,255,255,.9);
+        background: rgba(246, 252, 255, 0.9);
         margin: 0;
         position: relative;
         bottom: 0;
@@ -256,7 +256,7 @@
         align-items: left;
         height: fit-content;
         flex-direction: column;
-        min-height: 95px;
+        min-height: 83px;
 
         h2 {
           color: #37363e;
@@ -268,9 +268,9 @@
         }
 
         p {
-          font-size: 14px;
+          font-size: .8em;
           color: @text-color;
-          margin: 9px 0;
+          margin: 9px 0 0;
           line-height: 1.5;
           text-align: left;
           font-weight: 100;
@@ -279,9 +279,10 @@
         }
 
         span {
-          font-size: 0.7em;
+          font-size: 0.8em;
           line-height: 1.5;
           color: #37363F;
+          text-algin: right;
         }
       }
     }
