--- a/src/less/global.less
+++ b/src/less/global.less
@@ -29,6 +29,11 @@ article {
 	}
 }
 
+section {
+	max-width: 1150px;
+	margin: auto;
+}
+
 strong {
   font-family: Gordita-Medium,Gordita-Light;
   font-weight: 500;
