--- a/src/less/widgets.less
+++ b/src/less/widgets.less
@@ -253,7 +253,7 @@
 
 			button {
 				width: 100%;
-				background: linear-gradient(135deg,#40a270,#1f8ea7);
+				background: linear-gradient(165deg,#40a2a2,#1f68a7);
 				padding: 13px 20px;
 				font-size: 16px;
 				color: white;
