--- a/post.hbs
+++ b/post.hbs
@@ -76,10 +76,9 @@
 				</article>
 
 				{{> about-author}}
-				{{#author include="count.posts"}}{{#get "posts" include="count.posts"}}{{> author-card}}{{/get}}{{/author}}
+				{{#author include="count.posts"}}{{> author-card}}{{/author}}
 				{{> prev-next}}
-
-			</div>
+</div>
 			<!-- end main post area -->
 
 		</div>
