--- a/src/less/post.less
+++ b/src/less/post.less
@@ -102,14 +102,15 @@
 			padding-bottom: 9px;
 		}
 		@media(max-width: 600px) {
-			font-size: 1.7em;
-			margin-left: calc(~"-50vw + 50%");
-			margin-right: calc(~"-50vw + 50%");
-			width: auto !important;
+			font-size: 1.65em;
+			margin-left: calc(-50vw + 50%);
+			margin-right: calc(-50vw + 50%);
+			width: auto;
 			line-height: 1.3;
 			text-align: center;
-			font-weight: 500 !important;
+			font-weight: 500!important;
 			border: none;
+			padding: 0 12px 9px;
 		}
 	}
 
