post header outside container

--- a/src/less/code.less
+++ b/src/less/code.less
@@ -2,6 +2,7 @@
 
 pre {
   white-space: pre-wrap;
+  white-space: -moz-pre-wrap;  /* Mozilla, since 1999 */
   transition: all 0.5s ease-out;
   position: relative;
   overflow-y: hidden;
