--- a/default.hbs
+++ b/default.hbs
@@ -15,8 +15,7 @@
 	<link rel="stylesheet" type="text/css" href="{{asset "css/main.min.css"}}">
 	{{! Scripts }}
 	<script type="text/javascript" src="https://hackersandslackers.com/public/ghost-sdk.min.js"></script>
-	<script src="{{asset "/js/includes/jquery.min.js"}}"></script>
-	<script src="{{asset "/js/includes/secret.js"}}"></script>
+	<script async src="{{asset "/js/includes/jquery.min.js"}}"></script>
 
 	{{#is "post"}}
 		<meta property="og:image" content="{{img_url feature_image}}">
