--- a/partials/scripts.hbs
+++ b/partials/scripts.hbs
@@ -1,10 +1,9 @@
 <!-- scripts -->
 <script src="{{asset "/js/includes/highlight.pack.js"}}"></script>
 <script src="https://cdnjs.cloudflare.com/ajax/libs/gsap/1.20.4/TweenMax.min.js"></script>
+{{#is "post"}}<script src="{{asset "/js/includes/scrollbooster.min.js"}}"></script>{{/is}}
+{{#has author="Matt Alhonte"}}<script async src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
 <script src="{{asset "/js/main.min.js"}}"></script>
-{{#has author="Matt Alhonte"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/has}}
-{{#is "author"}}<script src="{{asset "/js/includes/previews.js"}}"></script>{{/is}}
-{{#is "post"}}<!--<script>themeApp.displayCommentsOnLoad();</script>-->{{/is}}
 <script src="https://cdnjs.cloudflare.com/ajax/libs/materialize/1.0.0-rc.2/js/materialize.min.js"></script>
 <script src="https://cdn.jsdelivr.net/npm/ghost-search@0.1.0/dist/ghost-search.min.js"></script>
 <!-- end scripts -->
