--- a/partials/series-headline.hbs
+++ b/partials/series-headline.hbs
@@ -1,4 +1,4 @@
-<script>
+<!--<script>
 var postcount = 0;
   $.ajax({
     url: 'https://hackersandslackers.com/ghost/api/v0.1/posts/',
@@ -19,4 +19,4 @@ var postcount = 0;
       //console.log('result of the fuckin ajax = ' + JSON.stringify(results));
     }
   });
-</script>
+</script>-->
